CODA-31 - Fix button vertical alignment (#44)

--- a/src/components/Button/styles/_styles.scss
+++ b/src/components/Button/styles/_styles.scss
@@ -10,6 +10,7 @@
     white-space: nowrap;
     border-radius: $radius-medium;
     user-select: none;
+    vertical-align: middle;
 
     &--medium {
         @include c-btn--size(34px);
